Small refactor and added tests